more statistics, improved layout

--- a/css/main.css
+++ b/css/main.css
@@ -238,3 +238,14 @@ html.waiting, html.waiting *
 {
     cursor: wait !important;
 }
+
+table.infoBox {
+    margin: 0;
+    padding: 0;
+    border-collapse: collapse;
+}
+
+table.infoBox td {
+    margin: 0;
+    padding: 2px;
+}
