- ipen number displaying fixed - index seminum export includes full accession number

--- a/css/main.css
+++ b/css/main.css
@@ -411,3 +411,8 @@ table.infoBox td {
   line-height: 18px;
   font-size: 12px;
 }
+
+/* disable padding for first cell in a row div */
+.row td:first-child {
+    padding-left: 0px;
+}
