Separations fixes - separations can now be added / deleted using the "default" ajax way - removing separations after they've been added is now possible (#0000234)

--- a/css/main.css
+++ b/css/main.css
@@ -416,3 +416,9 @@ table.infoBox td {
 .row td:first-child {
     padding-left: 0px;
 }
+
+/* separation div formatting for use as table */
+.separation_td {
+    display: inline-block;
+    width: 30%;
+}
