--- a/css/main.css
+++ b/css/main.css
@@ -252,164 +252,164 @@ table.infoBox td {
 
 /* Starter CSS for Menu */
 #cssmenu {
-  padding: 0;
-  margin: 0;
-  width: auto;
+    padding: 0;
+    margin: 0;
+    width: auto;
 }
 #cssmenu ul,
 #cssmenu li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 #cssmenu ul {
-  position: relative;
-  z-index: 597;
+    position: relative;
+    z-index: 597;
 }
 #cssmenu ul li {
-  float: left;
-  min-height: 1px;
-  vertical-align: middle;
+    float: left;
+    min-height: 1px;
+    vertical-align: middle;
 }
 #cssmenu ul li.hover,
 #cssmenu ul li:hover {
-  position: relative;
-  z-index: 599;
-  cursor: default;
+    position: relative;
+    z-index: 599;
+    cursor: default;
 }
 #cssmenu ul ul {
-  visibility: hidden;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 598;
-  width: 100%;
+    visibility: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 598;
+    width: 100%;
 }
 #cssmenu ul ul li {
-  float: none;
+    float: none;
 }
 #cssmenu ul ul ul {
-  top: 0;
-  left: 190px;
-  width: 190px;
+    top: 0;
+    left: 190px;
+    width: 190px;
 }
 #cssmenu ul li:hover > ul {
-  visibility: visible;
+    visibility: visible;
 }
 #cssmenu ul ul {
-  bottom: 0;
-  left: 0;
+    bottom: 0;
+    left: 0;
 }
 #cssmenu ul ul {
-  margin-top: 0;
+    margin-top: 0;
 }
 #cssmenu ul ul li {
-  font-weight: normal;
+    font-weight: normal;
 }
 #cssmenu a {
-  display: block;
-  line-height: 1em;
-  text-decoration: none;
+    display: block;
+    line-height: 1em;
+    text-decoration: none;
 }
 /* Custom CSS Styles */
 #cssmenu {
-  background:white url(bg2.gif) repeat-x left top;
-  font-size: 12px;
+    background:white url(bg2.gif) repeat-x left top;
+    font-size: 12px;
 }
 #cssmenu > ul {
-  display: inline-block;
+    display: inline-block;
 }
 #cssmenu:after,
 #cssmenu ul:after {
-  content: '';
-  display: block;
-  clear: both;
+    content: '';
+    display: block;
+    clear: both;
 }
 #cssmenu ul {
-  padding:4px 20px 5px 20px;
+    padding:4px 20px 5px 20px;
 }
 #cssmenu ul ul {
-  text-transform: none;
-  min-width: 190px;
-  top: 15px;
-  padding:7px 20px 5px 0px;
+    text-transform: none;
+    min-width: 190px;
+    top: 15px;
+    padding:7px 20px 5px 0px;
 }
 #cssmenu ul ul a {
-  background: #4c99c5;
-  color: #ffffff;
-  border: 1px solid #0082e7;
-  border-top: 0 none;
-  line-height: 150%;
-  padding: 5px 8px;
-  font-size: 12px;
+    background: #4c99c5;
+    color: #ffffff;
+    border: 1px solid #0082e7;
+    border-top: 0 none;
+    line-height: 150%;
+    padding: 5px 8px;
+    font-size: 12px;
 }
 #cssmenu ul ul ul {
-  border-top: 0 none;
-  padding:0px 20px 5px 0px;
+    border-top: 0 none;
+    padding:0px 20px 5px 0px;
 }
 #cssmenu ul ul li {
-  position: relative;
+    position: relative;
 }
 #cssmenu ul ul li:first-child > a {
-  border-top: 1px solid #0082e7;
+    border-top: 1px solid #0082e7;
 }
 #cssmenu ul ul li:hover > a {
-  background: #4eb1ff;
-  color: #ffffff;
+    background: #4eb1ff;
+    color: #ffffff;
 }
 #cssmenu ul ul li:last-child > a {
-  -moz-border-radius: 0 0 3px 3px;
-  -webkit-border-radius: 0 0 3px 3px;
-  border-radius: 0 0 3px 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -moz-box-shadow: 0 1px 0 #1b9bff;
-  -webkit-box-shadow: 0 1px 0 #1b9bff;
-  box-shadow: 0 1px 0 #1b9bff;
+    -moz-border-radius: 0 0 3px 3px;
+    -webkit-border-radius: 0 0 3px 3px;
+    border-radius: 0 0 3px 3px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -moz-box-shadow: 0 1px 0 #1b9bff;
+    -webkit-box-shadow: 0 1px 0 #1b9bff;
+    box-shadow: 0 1px 0 #1b9bff;
 }
 #cssmenu ul ul li:last-child:hover > a {
-  -moz-border-radius: 0 0 0 3px;
-  -webkit-border-radius: 0 0 0 3px;
-  border-radius: 0 0 0 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
+    -moz-border-radius: 0 0 0 3px;
+    -webkit-border-radius: 0 0 0 3px;
+    border-radius: 0 0 0 3px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
 }
 #cssmenu ul ul li.has-sub > a:after {
-  content: '>';
-  position: absolute;
-  top: 50%;
-  right: 5px;
-  margin-top: -8px;
+    content: '>';
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    margin-top: -8px;
 }
 #cssmenu ul li:hover > a,
 #cssmenu ul li.active > a {
-  color: #6399cd;
-  background-color:#EFF4FA;
-  text-decoration:none;
+    color: #6399cd;
+    background-color:#EFF4FA;
+    text-decoration:none;
 }
 #cssmenu ul li.has-sub > a:after {
-  content: '+';
-  margin-left: 3px;
+    content: '+';
+    margin-left: 3px;
 }
 #cssmenu ul li.last ul {
-  left: auto;
-  right: 0;
+    left: auto;
+    right: 0;
 }
 #cssmenu ul li.last ul ul {
-  left: auto;
-  right: 99.5%;
+    left: auto;
+    right: 99.5%;
 }
 #cssmenu a {
-  font-weight:bold;
-  background-color:transparent;
-  color: #ffffff;
-  padding: 2px 8px 3px;
+    font-weight:bold;
+    background-color:transparent;
+    color: #ffffff;
+    padding: 2px 8px 3px;
 }
 #cssmenu > ul > li > a {
-  line-height: 18px;
-  font-size: 12px;
+    line-height: 18px;
+    font-size: 12px;
 }
 
 /* disable padding for first cell in a row div */
@@ -421,4 +421,27 @@ table.infoBox td {
 .separation_td {
     display: inline-block;
     width: 30%;
+}
+
+/* toolbar classes (for update form) */
+.toolbar {
+    background-color: #FFFFFF;
+    color: #000000;
+    height: 2.5em;
+    padding: 0.5em;
+    position: absolute;
+    display: none;
+    z-index: 1000;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.toolbar .right {
+    text-align: right;
+}
+
+.toolbar.fixed {
+    position: fixed;
+    top: 0;
+    display: block;
 }
