--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,7 @@ span.specimenBox {
     z-index: 1000;
     font-size: 1.5em;
     font-weight: bold;
+    border: 1px solid black;
 }
 
 .toolbar .right {
