vegetative derivatives - editing & adding form through dialog - deleting entries from list - automatic refresh of derivatives info on edit / delete - index seminum inclusion & clearing

--- a/css/main.css
+++ b/css/main.css
@@ -457,3 +457,10 @@ span.specimenBox {
     top: 0;
     display: block;
 }
+
+/* separation div formatting for use as table */
+.vegetative_td {
+    display: inline-block;
+    width: 24%;
+}
+
